# Auto_Forecast

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  streamlit.py
notebooks/: Auto_Forecast_Daily_Final.ipynb  Auto_Forecast_Monthly_Final.ipynb  Auto_Forecast_weekly_Final.ipynb  daily_forecast.py  daily_forecastv2.py
src/: daily_forecast.py  forecast.py  monthly_forecast.py  weekly_forecast.py
src/models/: __init__.py  arima.py  ets.py  evaluate_models.py  gru.py  holt_winters.py  lstm.py  ml_models.py  prophet.py  tft_model.py
src/processing/: processing.py
src/utils/: logger.py  metrics.py
static/js/: currentChart.js  futureChart.js
templates/: index.html  instructions.html  test.html  upload.html
